syntax = "proto3";

option csharp_namespace = "GameStoreGRPCServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc AddGame(AddRequest) returns (AddReply);
  rpc ModifyGame(ModifyRequest) returns (ModifyReply);
  rpc DeleteGame(DeleteRequest) returns (DeleteReply);
  rpc AddUser(AddRequest) returns (AddReply);
  rpc ModifyUser(ModifyRequest) returns (ModifyReply);
  rpc DeleteUser(DeleteRequest) returns (DeleteReply);
}

message AddRequest {
  string name = 1;
  string genre = 2;
  string sinopsis = 3;
}

message AddReply {
  string message = 1;
}

message ModifyRequest {
  int64 id = 1;
  string name = 2;
  string genre = 3;
  string sinopsis = 4;
}

message ModifyReply {
  string message = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteReply {
  string message = 1;
}
